Contract Configurator 1.9.3
- Added VesselParameterGroup.hideVesselName.
- General improvements to behaviour of parameters with in-sequence completion (thanks inigma).
- Fixed issue with some expressions being parsed twice in the Expression behaviour (thanks linuxgurugamer).
- Fixed problem with Duration timer contracts not working when used as a child parameter (thanks TrooperCooper & NathanKell).
- Fixed issue that caused disabled stock contracts to re-enable themselves on occasion (thanks Rokker).
- Fixed supposedly removed Kerbals going MIA (thanks inigma).
- Fixed major issue with RemoveKerbal (thanks inigma).
- Fixed issue with Sequence parameter not always firing (thanks Steven Mading).
- Fixed issue where CollectScience wouldn't correctly check that it needed to be completed in sequence (thanks linuxgurugamer).
- Fixed failWhenUnmet to actually fail contracts (thanks inigma).
- Fixed issue with biomes with spaces in their names in CollectScience (like "Ice Caps").

Contract Configurator 1.9.2.1
- Fixed problem with loading waypoints from older versions of Contract Configurator (thanks SpaceNomad).

Contract Configurator 1.9.2
- Added minRateOfClimb and maxRateOfClimb to ReachState.
- Support negative latitudes in ReachState.
- Fixed major contract pre-loader exception on startup (thanks smjjames).
- Fixed error handling in expression parser (thanks severedsolo).
- Fixed HasCrew incorrectly only handling kerbals of type 'Crew' (thanks bertibott).
- Fixed exception in uniqueness checks that were done at the contract group level (thanks severedsolo).
- Fixed issue with SpawnPassengers always spawning passengers instead of whatever the contract specified (thanks inigma).
- Fixed issue with Vessel values not being properly saved in the VAB/SPH for uniqueness checks (thanks severedsolo).
- Fixed issue with the GROUP_ALL and CONTRACT_ALL uniqueness checks not working as advertised (thanks severedsolo).