@@ -1,6 +1,7 @@
 Contract Configurator 1.9.3
 - Added VesselParameterGroup.hideVesselName.
 - General improvements to behaviour of parameters with in-sequence completion (thanks inigma).
+- Improved reliability of RemoteTech parameters.
 - Fixed issue with some expressions being parsed twice in the Expression behaviour (thanks linuxgurugamer).
 - Fixed problem with Duration timer contracts not working when used as a child parameter (thanks TrooperCooper & NathanKell).
 - Fixed issue that caused disabled stock contracts to re-enable themselves on occasion (thanks Rokker).
